--- a/web/index.html
+++ b/web/index.html
@@ -29,6 +29,8 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-XaF929loVWl0kVVe6Alpu1pFhix6CJA"></script>
+
   <title>inride_driver</title>
   <link rel="manifest" href="manifest.json">
 </head>
